--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.Desktop-Test=.
+file.reference.Git-Quantox-Test=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.Desktop-Test}
+site.root.folder=${file.reference.Git-Quantox-Test}
