--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
-file.reference.Git-Quantox-Test=.
-files.encoding=UTF-8
-site.root.folder=${file.reference.Git-Quantox-Test}
+include.path=${php.global.include.path}
+php.version=PHP_56
+source.encoding=UTF-8
+src.dir=.
+tags.asp=false
+tags.short=false
+web.root=.
